--- a/shop/magazines.html
+++ b/shop/magazines.html
@@ -1,192 +1,1 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Shop magazines at Modular Gunworks LLC - High-capacity mags from top brands.">
-  <meta name="keywords" content="magazines, mags, high-capacity, glock, ar-15, tactical">
-  <meta name="author" content="Modular Gunworks LLC">
-  <meta name="theme-color" content="#181a1b">
-  
-  <title>Magazines - Modular Gunworks LLC</title>
-  
-  <link rel="stylesheet" href="../styles/design-system.css">
-  <link rel="stylesheet" href="../styles/components.css">
-  <link rel="stylesheet" href="../styles/layout.css">
-  <link rel="stylesheet" href="../styles/age-gate.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="../favicon.png">
-  
-  <style>
-    :root { --color-primary: #b22222; --color-accent: #1a2c4b; --color-bg-dark: #181a1b; --color-text: #333; --color-light: #f5f5f5; }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body { height: 100%; background-color: #fff; }
-    #site-header { background: linear-gradient(135deg, rgba(24,26,27,0.15) 0%, rgba(24,26,27,0.05) 100%), url('../images/Header-flagV2.png') center top/cover no-repeat; background-attachment: fixed; color: #fff; padding: 2rem 0 0 0; position: sticky; top: 0; z-index: 100; max-height: 450px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-    .header-top-row { text-align: center; padding: 1.5rem 2rem; display: flex; align-items: center; justify-content: center; position: relative; }
-    .header-top-row h1 { font-size: 2rem; font-weight: 900; letter-spacing: 2px; text-shadow: 0 2px 8px rgba(0,0,0,0.5); margin: 0; color: #fff; position: absolute; left: 50%; transform: translateX(-50%); flex: 1; }
-    .header-logo { position: absolute; right: 2rem; margin: 0; cursor: pointer; display: flex; flex-direction: column; align-items: center; transition: transform 0.3s ease; text-decoration: none; gap: 0.3rem; }
-    .header-logo:hover { transform: scale(1.08); }
-    .logo-label { font-size: 0.7rem; font-weight: 700; letter-spacing: 1px; color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,0.3); }
-    .header-logo img { height: 90px; width: auto; background: rgba(255,255,255,0.98); padding: 6px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.25); border: none; }
-    .header-middle-row { padding: 1.5rem 2rem; display: flex; align-items: center; justify-content: center; gap: 2rem; position: relative; }
-    .header-left-links { display: flex; gap: 2rem; align-items: center; position: absolute; right: 2rem; }
-    .header-left-links a { color: #fff; text-decoration: none; font-weight: 600; font-size: 0.95rem; transition: color 0.3s; text-shadow: 0 1px 4px rgba(0,0,0,0.3); }
-    .header-left-links a:hover { color: #ffeb3b; }
-    .search-bar { display: flex; gap: 0; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-radius: 4px; overflow: hidden; }
-    .search-bar input { flex: 1; padding: 0.8rem 1.2rem; border: none; font-size: 0.95rem; }
-    .search-bar button { padding: 0.8rem 1.5rem; background: var(--color-primary); color: #fff; border: none; font-weight: 600; cursor: pointer; }
-    .category-nav { background: var(--color-accent); display: flex; justify-content: center; gap: 2.5rem; padding: 0.8rem 2rem; flex-wrap: wrap; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    .category-nav a { color: #fff; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: color 0.3s; white-space: nowrap; }
-    .category-nav a:hover { color: var(--color-primary); }
-    .promo-bar { background: linear-gradient(90deg, var(--color-primary) 0%, var(--color-accent) 100%); color: #fff; text-align: center; padding: 0.8rem 2rem; font-weight: 600; font-size: 1rem; letter-spacing: 1px; }
-    main { max-width: 1400px; margin: 0 auto; padding: 3rem 2rem; }
-    .page-title { font-size: 2rem; color: var(--color-bg-dark); margin-bottom: 2rem; }
-    .products-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; margin-bottom: 4rem; }
-    .product-card { background: #fff; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; transition: all 0.3s ease; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
-    .product-card:hover { transform: translateY(-4px); box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .product-image { width: 100%; height: 200px; background: #f5f5f5; overflow: hidden; }
-    .product-image img { width: 100%; height: 100%; object-fit: cover; }
-    .product-info { padding: 1rem; }
-    .product-name { font-size: 1rem; color: var(--color-bg-dark); margin-bottom: 0.5rem; font-weight: 600; }
-    .product-price { font-size: 1.2rem; font-weight: 700; color: var(--color-primary); margin-bottom: 1rem; }
-    .product-btn { width: 100%; padding: 0.7rem; background: var(--color-primary); color: #fff; border: none; border-radius: 4px; cursor: pointer; font-weight: 600; transition: background 0.3s; }
-    .product-btn:hover { background: #8b1a1a; }
-    footer { background: var(--color-bg-dark); color: #fff; padding: 3rem 2rem 1rem; margin-top: 4rem; border-top: 4px solid var(--color-primary); }
-    .footer-content { max-width: 1400px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; margin-bottom: 2rem; }
-    .footer-section h3 { font-size: 1.1rem; margin-bottom: 1rem; color: var(--color-primary); }
-    .footer-section ul { list-style: none; }
-    .footer-section a { color: #ccc; text-decoration: none; font-size: 0.9rem; line-height: 1.8; transition: color 0.3s; }
-    .footer-section a:hover { color: var(--color-primary); }
-    .footer-bottom { text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 1.5rem; color: #999; font-size: 0.85rem; }
-  </style>
-
-  <script src="../scripts/age-gate.js"></script>
-</head>
-
-<body>
-
-  <header id="site-header">
-    <div class="header-top-row">
-      <h1>MODULAR GUNWORKS LLC</h1>
-      <a href="../index.html" class="header-logo" title="Home">
-        <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks Logo">
-        <span class="logo-label">HOME</span>
-      </a>
-    </div>
-
-    <div class="header-middle-row">
-      <div class="header-left-links">
-        <a href="#account">Account</a>
-        <a href="#help">Help</a>
-        <a href="../shop/cart.html">Cart</a>
-      </div>
-
-      <form class="search-bar" action="#" method="get">
-        <input type="text" placeholder="Search ammo, gear, optics...">
-        <button type="submit"><i class="fas fa-search"></i></button>
-      </form>
-    </div>
-
-    <nav class="category-nav">
-      <a href="../shop/ammunition.html">Ammunition</a>
-      <a href="../shop/magazines.html">Magazines</a>
-      <a href="../shop/gun-parts.html">Gun Parts</a>
-      <a href="../shop/gear.html">Gear</a>
-      <a href="../shop/optics.html">Optics</a>
-      <a href="../shop/reloading.html">Reloading</a>
-      <a href="../shop/survival.html">Survival</a>
-      <a href="../shop/brands.html">Brands</a>
-      <a href="../shop/sale.html">ON SALE</a>
-      <a href="../services.html">Services</a>
-    </nav>
-
-    <div class="promo-bar">
-       Veteran-Owned Business | Fast Shipping | Professional Service
-    </div>
-  </header>
-
-  <main>
-    <h1 class="page-title">Magazines</h1>
-    <p style="color: #666; margin-bottom: 2rem;">High-capacity magazines from top brands</p>
-
-    <div class="products-grid">
-      <div class="product-card">
-        <div class="product-image"><img src="../images/categories/magazines.jpg" alt="Product"></div>
-        <div class="product-info">
-          <div class="product-name">Glock 9mm Magazine 15rd</div>
-          <div class="product-price">\.99</div>
-          <button class="product-btn">Add to Cart</button>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"><img src="../images/categories/magazines.jpg" alt="Product"></div>
-        <div class="product-info">
-          <div class="product-name">AR-15 Magazine 30rd</div>
-          <div class="product-price">\.99</div>
-          <button class="product-btn">Add to Cart</button>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"><img src="../images/categories/magazines.jpg" alt="Product"></div>
-        <div class="product-info">
-          <div class="product-name">1911 Magazine 8rd</div>
-          <div class="product-price">\.99</div>
-          <button class="product-btn">Add to Cart</button>
-        </div>
-      </div>
-      <div class="product-card">
-        <div class="product-image"><img src="../images/categories/magazines.jpg" alt="Product"></div>
-        <div class="product-info">
-          <div class="product-name">AK-47 Magazine 30rd</div>
-          <div class="product-price">\.99</div>
-          <button class="product-btn">Add to Cart</button>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    <div class="footer-content">
-      <div class="footer-section">
-        <h3>Shop</h3>
-        <ul>
-          <li><a href="../shop/ammunition.html">Ammunition</a></li>
-          <li><a href="../shop/magazines.html">Magazines</a></li>
-          <li><a href="../shop/gun-parts.html">Gun Parts</a></li>
-          <li><a href="../shop/gear.html">Gear</a></li>
-          <li><a href="../shop/optics.html">Optics</a></li>
-          <li><a href="../shop/reloading.html">Reloading</a></li>
-          <li><a href="../shop/survival.html">Survival</a></li>
-          <li><a href="../shop/brands.html">Brands</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Company</h3>
-        <ul>
-          <li><a href="../about.html">About Us</a></li>
-          <li><a href="../contact.html">Contact</a></li>
-          <li><a href="../faq.html">FAQ</a></li>
-          <li><a href="../blog.html">Blog</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-section">
-        <h3>Legal</h3>
-        <ul>
-          <li><a href="../terms.html">Terms & Conditions</a></li>
-          <li><a href="../privacy.html">Privacy Policy</a></li>
-          <li><a href="../returns.html">Returns</a></li>
-          <li><a href="../order-status.html">Order Status</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p> 2026 Modular Gunworks LLC. All rights reserved. | Veteran-Owned Business in Huntsville, Alabama</p>
-      <p>All firearm sales comply with federal, state, and local laws. FFL required for applicable items.</p>
-    </div>
-  </footer>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Shop magazines at Modular Gunworks LLC"><title>Magazines - Modular Gunworks LLC</title><link rel="stylesheet" href="../styles/design-system.css"><link rel="stylesheet" href="../styles/components.css"><link rel="stylesheet" href="../styles/layout.css"><link rel="stylesheet" href="../styles/product-cards.css"><link rel="stylesheet" href="../styles/filters.css"><link rel="stylesheet" href="../styles/age-gate.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"><style>:root{--color-primary:#b22222;--color-accent:#1a2c4b;--color-bg-dark:#181a1b}html,body{height:100%;background-color:#fff}#site-header{background:linear-gradient(135deg,rgba(24,26,27,.15) 0%,rgba(24,26,27,.05) 100%),url('../images/Header-flagV2.png') center top/cover no-repeat;background-attachment:fixed;color:#fff;padding:2rem 0 0 0;position:sticky;top:0;z-index:100;max-height:450px;overflow:hidden;box-shadow:0 4px 12px rgba(0,0,0,.15)}.header-top-row{text-align:center;padding:1.5rem 2rem;display:flex;align-items:center;justify-content:center;position:relative}.header-top-row h1{font-size:2rem;font-weight:900;letter-spacing:2px;text-shadow:0 2px 8px rgba(0,0,0,.5);margin:0;color:#fff;position:absolute;left:50%;transform:translateX(-50%)}.header-logo{position:absolute;right:2rem;text-decoration:none}.header-logo img{height:90px;background:rgba(255,255,255,.98);padding:6px;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,.25)}.header-middle-row{padding:1.5rem 2rem;display:flex;align-items:center;justify-content:center;gap:2rem}.header-left-links{display:flex;gap:2rem;position:absolute;right:2rem}.header-left-links a{color:#fff;text-decoration:none;font-weight:600;font-size:.95rem;text-shadow:0 1px 4px rgba(0,0,0,.3)}.header-left-links a:hover{color:#ffeb3b}.search-bar{display:flex;box-shadow:0 2px 8px rgba(0,0,0,.1);border-radius:4px;overflow:hidden}.search-bar input{padding:.8rem 1.2rem;border:none;font-size:.95rem;min-width:300px}.search-bar button{padding:.8rem 1.5rem;background:var(--color-primary);color:#fff;border:none;font-weight:600;cursor:pointer}.search-bar button:hover{background:#8b1a1a}.category-nav{background:var(--color-accent);display:flex;justify-content:center;gap:2.5rem;padding:.8rem 2rem;flex-wrap:wrap;box-shadow:0 2px 6px rgba(0,0,0,.1)}.category-nav a{color:#fff;text-decoration:none;font-weight:600;font-size:.9rem;white-space:nowrap}.category-nav a.active{color:var(--color-primary)}main{max-width:1300px;margin:0 auto;padding:2rem 1rem}.page-header h1{font-size:2.2rem;color:var(--color-bg-dark);margin-bottom:.5rem;border-left:5px solid var(--color-primary);padding-left:1rem}.page-header p{color:#666;font-size:1rem}.product-controls{display:flex;justify-content:space-between;align-items:center;margin-bottom:2rem;gap:1rem;flex-wrap:wrap}.sort-controls select{padding:.5rem 1rem;border:1px solid #ddd;border-radius:4px;font-size:.9rem}#site-footer{background:var(--color-bg-dark);color:#fff;padding:3rem 2rem;margin-top:3rem;text-align:center}.footer-content{max-width:1200px;margin:0 auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:2rem;text-align:left;margin-bottom:2rem}.footer-section a{display:block;margin-bottom:.5rem;font-size:.9rem}.footer-bottom{border-top:1px solid #444;padding-top:1.5rem;font-size:.9rem;color:#aaa}@media (max-width:768px){.header-top-row h1{font-size:1.5rem}.header-logo{position:relative;right:auto}.search-bar input{min-width:150px}.category-nav{gap:1rem;font-size:.85rem}}</style></head><body><header id="site-header"><div class="header-top-row"><h1>MAGAZINES</h1><a href="../index.html" class="header-logo"><img src="../images/brands/modular-gunworks-logo.png" alt="Logo"></a></div><div class="header-middle-row"><div class="search-bar"><input type="text" id="search-input" placeholder="Search products..."><button id="search-btn"><i class="fas fa-search"></i></button></div><div class="header-left-links"><a href="../index.html">Home</a><a href="../contact.html">Contact</a><a href="#">Cart (0)</a></div></div></header><nav class="category-nav"><a href="ammunition.html">Ammunition</a><a href="guns.html">Firearms</a><a href="optics.html">Optics</a><a href="gear.html">Gear</a><a href="magazines.html" class="active">Magazines</a><a href="reloading.html">Reloading</a><a href="gun-parts.html">Gun Parts</a></nav><main><div class="page-header"><h1>Magazines</h1><p>Live inventory from our wholesaler.</p></div><div class="products-section"><aside class="filters-sidebar" id="filters-container"><div class="loading">Loading filters...</div></aside><div><div class="product-controls"><span id="product-count">Loading...</span></div><div id="products-container" class="products-grid loading"><div class="loading">Loading products...</div></div></div></div></main><footer id="site-footer"><div class="footer-content"><div class="footer-section"><h3>Shop</h3><a href="ammunition.html">Ammunition</a><a href="guns.html">Firearms</a></div></div><p>&copy; 2026 Modular Gunworks LLC.</p></footer><template id="product-template"><div class="product-card"><div class="product-image"><img src="" alt="" class="product-img"><span class="stock-badge"></span></div><div class="product-info"><div class="product-brand"></div><div class="product-name"></div><div class="product-pricing"><div class="price-current"></div></div><button class="product-button"></button></div></div></template><script>let PRODUCT_DATA=[];async function loadProducts(){try{const response=await fetch('../data/products/magazines.json');if(!response.ok)throw new Error('Failed to load products');const data=await response.json();PRODUCT_DATA=data.products||[];renderFilters();renderProducts(PRODUCT_DATA);console.log(`Loaded ${PRODUCT_DATA.length} products`);}catch(error){console.error('Error loading products:',error);document.querySelector('.filters-content').innerHTML='<p style="color:red;">Error loading filters</p>';}}document.addEventListener('DOMContentLoaded',loadProducts);if(document.readyState==='loading'){document.addEventListener('DOMContentLoaded',loadProducts);}else{loadProducts();}function renderProducts(p){const c=document.getElementById('products-container');c.innerHTML='';if(!p||p.length===0){c.innerHTML='<div>No products</div>';return;}p.forEach(prod=>{const t=document.getElementById('product-template').content.cloneNode(true);t.querySelector('.product-img').src=prod.image;t.querySelector('.product-brand').textContent=prod.brand;t.querySelector('.product-name').textContent=prod.name;t.querySelector('.price-current').textContent='$'+prod.price;c.appendChild(t);});document.getElementById('product-count').textContent=p.length+' products';}document.getElementById('search-btn').addEventListener('click',()=>{const s=document.getElementById('search-input').value.toLowerCase();renderProducts(PRODUCT_DATA.filter(p=>p.name.toLowerCase().includes(s)));});document.addEventListener('DOMContentLoaded',()=>{renderProducts(PRODUCT_DATA);});</script><script src="../scripts/filter-engine.js"></script></body></html>
